sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:8: error: not found: value c1
		c1=0
                ^AlgCocktailSort2:11: error: not found: value c1
			c1=c1+1
                        ^AlgCocktailSort2:16: error: not found: value c2
		c2=0
                ^AlgCocktailSort2:19: error: not found: value c2
			c2=c2+1
                        ^AlgCocktailSort2:23: error: not found: value c1
	}	while((c1|c2)!=0)
                       ^